--- a/lawbreaker/web/static/maintenance.html
+++ b/lawbreaker/web/static/maintenance.html
@@ -3,9 +3,10 @@
         <title>Testbreaker: The Lawbreaker test environment</title>
         <link rel="stylesheet" type="text/css" href="static/css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="static/css/skeleton.min.css" />
-
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
+
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     </head>
     <body style="margin:100px;font-family: 'Crimson Text';">
         <div class="container">
