removing all inline css

--- a/lawbreaker/web/static/maintenance.html
+++ b/lawbreaker/web/static/maintenance.html
@@ -3,21 +3,22 @@
         <title>Testbreaker: The Lawbreaker test environment</title>
         <link rel="stylesheet" type="text/css" href="/static/css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="/static/css/skeleton.min.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/lawbreaker.css" />
         <link rel="stylesheet" type="text/css" href="/static/css/font.css" />
 
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" />
         <link rel="shortcut icon" href="/static/favicon.ico" />
     </head>
-    <body style="margin:100px;font-family: 'Crimson Text';">
+    <body>
         <div class="container">
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:3em;text-align:center;">
+                <div class="offset-by-two columns eight columns maintenance-header">
                     Testbreaker
                 </div>
             </div>
             <hr>
             <div class="row">
-                <div class="offset-by-one ten columns" style="font-size:2em;text-align:justify;">
+                <div class="offset-by-one ten columns maintenance-text">
                     This is the pre-deployment site for Lawbreaker.
                     It is currently offline since there are no new changes ready for public testing on
                     Lawbreaker.
@@ -28,7 +29,7 @@
             </div>
             <hr>
             <div class="row">
-                <div class="twelve columns" style="text-align:center;">
+                <div class="twelve columns center-text">
                     <a href="https://github.com/hrangan/lawbreaker" target="_blank">Lawbreaker</a> by hrangan
                     ·
                     <a href="https://www.drivethrurpg.com/product/250888/Knave" target="_blank">Knave</a> by Questing Beast
